fixed web site layout on mobile (Closes #24)

--- a/webapp/static/main.css
+++ b/webapp/static/main.css
@@ -15,3 +15,7 @@
 .table > tbody > tr.row-striped-odd  > td {
   background-color: #f9f9f9;
 }
+
+.menu-item {
+  min-height: 157px;
+}
