--- a/webapp/static/offcanvas.css
+++ b/webapp/static/offcanvas.css
@@ -2,10 +2,6 @@
  * Style tweaks
  * --------------------------------------------------
  */
-html,
-body {
-  overflow-x: hidden; /* Prevent scroll on narrow devices */
-}
 body {
   padding-top: 70px;
 }
